@@ -23,6 +23,7 @@ export(enrichGO)
 export(enrichKEGG)
 export(enrichMKEGG)
 export(enricher)
+export(facet_grid)
 export(go2ont)
 export(go2term)
 export(gofilter)
@@ -70,6 +71,7 @@ importFrom(ggplot2,aes_)
 importFrom(ggplot2,aes_string)
 importFrom(ggplot2,coord_flip)
 importFrom(ggplot2,element_text)
+importFrom(ggplot2,facet_grid)
 importFrom(ggplot2,fortify)
 importFrom(ggplot2,geom_bar)
 importFrom(ggplot2,geom_point)
