@@ -14,6 +14,7 @@
 ##' @param minGSSize minimal size of genes annotated by Ontology term for testing.
 ##' @param maxGSSize maximal size of genes annotated for testing
 ##' @param readable whether mapping gene ID to gene Name
+##' @param pool If ont='ALL', whether pool 3 GO sub-ontologies
 ##' @return An \code{enrichResult} instance.
 ##' @importClassesFrom DOSE enrichResult
 ##' @importMethodsFrom DOSE show
@@ -41,25 +42,51 @@ enrichGO <- function(gene,
                      qvalueCutoff = 0.2,
                      minGSSize = 10,
                      maxGSSize = 500,
-                     readable=FALSE) {
+                     readable=FALSE, pool=FALSE) {
 
     ont %<>% toupper
     ont <- match.arg(ont, c("BP", "CC", "MF", "ALL"))
-
     GO_DATA <- get_GO_data(OrgDb, ont, keytype)
 
-    res <- enricher_internal(gene,
-                             pvalueCutoff=pvalueCutoff,
-                             pAdjustMethod=pAdjustMethod,
-                             universe = universe,
-                             qvalueCutoff = qvalueCutoff,
-                             minGSSize = minGSSize,
-                             maxGSSize = maxGSSize,
-                             USER_DATA = GO_DATA
-                             )
+    if (missing(universe))
+        universe <- NULL
 
-    if (is.null(res))
-        return(res)
+    if (ont == "ALL" && !pool) {
+        lres <- lapply(c("BP", "CC", "MF"), function(ont)
+            suppressMessages(enrichGO(gene, OrgDb, keytype, ont,
+                     pvalueCutoff, pAdjustMethod, universe,
+                     qvalueCutoff, minGSSize, maxGSSize
+                     ))
+            )
+
+        lres <- lres[!sapply(lres, is.null)]
+        if (length(lres) == 0)
+            return(NULL)
+
+        df <- do.call('rbind', lapply(lres, as.data.frame))
+        geneSets <- lres[[1]]@geneSets
+        if (length(lres) > 1) {
+            for (i in 2:length(lres)) {
+                geneSets <- append(geneSets, lres[[i]]@geneSets)
+            }
+        }
+        res <- lres[[1]]
+        res@result <- df
+        res@geneSets <- geneSets
+    } else {
+        res <- enricher_internal(gene,
+                                 pvalueCutoff=pvalueCutoff,
+                                 pAdjustMethod=pAdjustMethod,
+                                 universe = universe,
+                                 qvalueCutoff = qvalueCutoff,
+                                 minGSSize = minGSSize,
+                                 maxGSSize = maxGSSize,
+                                 USER_DATA = GO_DATA
+                                 )
+
+        if (is.null(res))
+            return(res)
+    }
 
     res@keytype <- keytype
     res@organism <- get_organism(OrgDb)
