@@ -1,0 +1,16 @@
+% Generated by roxygen2: do not edit by hand
+% Please edit documentation in R/utilities.R
+\docType{import}
+\name{reexports}
+\alias{facet_grid}
+\alias{reexports}
+\title{Objects exported from other packages}
+\description{
+These objects are imported from other packages. Follow the links
+below to see their documentation.
+
+\describe{
+  \item{ggplot2}{\code{\link[ggplot2]{facet_grid}}}
+}}
+\keyword{internal}
+
